Added welcome_page (still needs to be incoporated), slightly modified final_page.

--- a/final_page.htm
+++ b/final_page.htm
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <script type="text/javascript" src="jquery.js"></script>
 <html>
+<head>
+<title>Thank you!</title>
+</head>
 <body>
 
 <h2> You have finished! Based on our evaluation, you understand <span id="summary">??</span>% of nhk_easy. </h2>
