Modifed final_page and welcome_page 0808

--- a/final_page.htm
+++ b/final_page.htm
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2> You have finished! Based on our evaluation, you understand <span id="summary">??</span>% of nhk_easy. </h2>
+<h2> You have finished! Based on our evaluation, you understand <span id="summary">??</span>% of the vocabulary knolwedge in 380 nhk easy articles. </h2>
 
 Please take a minute to fill in this survey. Your responses will help us make the tool better!
 <br>
@@ -20,7 +20,7 @@ Please take a minute to fill in this survey. Your responses will help us make th
 <br>
 <input type="radio" name="japanese" value="1">Less than 6 months<br>
 <input type="radio" name="japanese" value="2">6 months to 1 year<br>
-<input type="radio" name="japanese" value="3" checked>1 to 2 years<br>
+<input type="radio" name="japanese" value="3">1 to 2 years<br>
 <input type="radio" name="japanese" value="4">2 to 3 years<br>
 <input type="radio" name="japanese" value="5">More than 3 years<br>
 
@@ -31,7 +31,7 @@ Please take a minute to fill in this survey. Your responses will help us make th
 <br>
 <input type="radio" name="difficulty" value="1">1 (far too easy)<br>
 <input type="radio" name="difficulty" value="2">2 (slightly too easy)<br>
-<input type="radio" name="difficulty" value="3" checked>3 (at the right difficulty).<br>
+<input type="radio" name="difficulty" value="3">3 (at the right difficulty).<br>
 <input type="radio" name="difficulty" value="4">4 (slightly too hard)<br>
 <input type="radio" name="difficulty" value="5">5 (far too hard)<br>
 
@@ -42,7 +42,7 @@ Please take a minute to fill in this survey. Your responses will help us make th
 <br>
 <input type="radio" name="diversity" value="1">1 (far too similar)<br>
 <input type="radio" name="diversity" value="2">2 (slightly too similar)<br>
-<input type="radio" name="diversity" value="3" checked>3 (appropriately diverse)<br>
+<input type="radio" name="diversity" value="3">3 (appropriately diverse)<br>
 <input type="radio" name="diversity" value="4">4 (slightly too diverse)<br>
 <input type="radio" name="diversity" value="5">5 (far too diverse)<br>
 
@@ -53,7 +53,7 @@ Please take a minute to fill in this survey. Your responses will help us make th
 <br>
 <input type="radio" name="like" value="1">1 (strongly disliked them)<br>
 <input type="radio" name="like" value="2">2 (disliked them)<br>
-<input type="radio" name="like" value="3" checked>3 (neutral)<br>
+<input type="radio" name="like" value="3">3 (neutral)<br>
 <input type="radio" name="like" value="4">4 (liked them)<br>
 <input type="radio" name="like" value="5">5 (strongly liked them)<br>
 
