--- a/welcome_page.htm
+++ b/welcome_page.htm
@@ -9,7 +9,7 @@
 
 <h2>Study overview</h2>
 We are researching methods for second language learning. When using this tool, we will collect anonymous data to improve the tool and understand second language learning better. You will see around 50 Japanese sentences and be asked how well you understand them. Afterwards, you will be given an estimation of how well you can understand articles in NHK Easy, a Japanese news website for language learners. You will also be asked to fill out a survey.<br><br>
-The system may take a few seconds to initialize. We appreciate your patience.
+The system may take a few seconds to initialize, and you will see the nhk easy homepage during that time. We appreciate your patience.
 <h2>Risks and benefits</h2>
 There are no risks in this study beyond those in encountered in daily life. Your participation will help us improve our language learning tools. You will not be compensated for participation in this study.
 <h2>Your answers will be confidential</h2>
