Modified welcome_page and final_page 0808

--- a/final_page.htm
+++ b/final_page.htm
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2> You have finished! Based on our evaluation, you understand <span id="summary">??</span>% of the vocabulary knolwedge in 380 nhk easy articles. </h2>
+<h2> You have finished! Based on our evaluation, you understand <span id="summary">??</span>% of the vocabulary knolwedge in 380 NHK Easy articles. </h2>
 
 Please take a minute to fill in this survey. Your responses will help us make the tool better!
 <br>
